--- a/UI/05화 : CSS 속성 (2).md
+++ b/UI/05화 : CSS 속성 (2).md
@@ -5,13 +5,12 @@
 ![image](https://github.com/last-child/LV0/assets/98595054/840a5865-548e-40bd-9963-a1fc9da8935c) <br><br>   
 
 #### position 속성을 통해 요소들의 배치 방법을 지정할 수 있다.
-#### 속성 값이 기본 값인 `static`으로 지정된 요소는 HTML 문서에 작성된 순서대로 배치된다.
-#### top, bottom, left, right 속성을 통해 해당 요소의 위치를 변경할 수 없다. <br><br>      
+#### 속성 값이 기본 값인 `static`으로 지정된 요소는 레이아웃에 따라 배치된다.
+#### top, bottom, left, right 속성을 통해 해당 요소의 위치를 변경할 수 없다. <br><br>     
 
-#### 속성 값이 `relative`인 요소는 원래 있던 위치를 기준으로 배치될 수 있다.
-#### 요소의 시각적 위치가 달라질 뿐 레이아웃에 영향을 미치지 않는다.
-#### 즉 해당 요소의 실제 위치는 변하지 않으며, 다른 요소의 배치에도 영향을 미치지 않는다. <br><br>   
+#### 속성 값이 `relative`인 요소는 원래 위치를 기준으로 배치된다.
+#### 시각적 위치가 변경되지만, 실제 위치가 변하지 않으므로 레이아웃 구조는 바뀌지 않는다. <br><br>   
 
-#### 속성 값이 `absolute`인 요소는 position 속성 값이 `static`이 아닌 가장 가까운 상위 요소를 기준으로 배치된다.
-#### 만일 상위 요소들 중에 position 속성 값이 `static`이 아닌 요소가 없다면 해당 요소는 뷰포트를 기준으로 배치된다.
-#### 해당 요소는 레이아웃의 영향을 받지 않고 독립적으로 배치되기 때문에 다른 요소의 배치에 영향을 줄 수 있다.
+#### 속성 값이 `absolute`인 요소는 `static`이 아닌 가장 가까운 상위 요소를 기준으로 배치된다.
+#### 만일 그러한 상위 요소가 없다면 해당 요소는 뷰포트(viewport)를 기준으로 배치된다.
+#### 해당 요소의 위치는 특정 상위 요소에 따라 결정되므로 레이아웃 구조가 변경될 수 있다.
