--- a/UI/05화 : CSS 속성 (2).md
+++ b/UI/05화 : CSS 속성 (2).md
@@ -1,16 +1,24 @@
-## 01. Position 속성
+## 01. Layout 속성 (1)
 
 <br>   
 
 ![image](https://github.com/last-child/LV0/assets/98595054/840a5865-548e-40bd-9963-a1fc9da8935c) <br><br>   
 
 #### position 속성을 통해 요소들의 배치 방법을 지정할 수 있다.
-#### 속성 값이 기본 값인 `static`으로 지정된 요소는 레이아웃에 따라 배치된다.
+#### 속성 값이 기본 값인 `static`으로 지정된 요소는 레이아웃에 따라 그대로 배치된다.
 #### top, bottom, left, right 속성을 통해 해당 요소의 위치를 변경할 수 없다. <br><br>     
 
 #### 속성 값이 `relative`인 요소는 원래 위치를 기준으로 배치된다.
 #### 시각적 위치가 변경되지만, 실제 위치가 변하지 않으므로 레이아웃 구조는 바뀌지 않는다. <br><br>   
 
 #### 속성 값이 `absolute`인 요소는 `static`이 아닌 가장 가까운 상위 요소를 기준으로 배치된다.
-#### 만일 그러한 상위 요소가 없다면 해당 요소는 뷰포트(viewport)를 기준으로 배치된다.
-#### 해당 요소의 위치는 특정 상위 요소에 따라 결정되므로 레이아웃 구조가 변경될 수 있다.
+#### 만일 `static`이 아닌 상위 요소가 없다면 해당 요소는 뷰포트(viewport)를 기준으로 배치된다.
+#### 해당 요소의 실제 위치도 변경되므로 레이아웃 구조가 바뀔 수 있다. <br><br>   
+
+#### z-index 속성을 활용하면 겹쳐진 요소들 간의 배치 순서를 지정할 수 있다.
+#### 속성 값은 정수 값으로 지정되며, z-index 값이 높을수록 더 위에 쌓이게 된다.
+#### 속성 값이 동일한 요소들이 겹치면, HTML 문서상 나중에 나올수록 더 위에 쌓인다.
+#### position 속성 값이 `static`인 요소에는 z-index 속성이 적용되지 않는다.
+
+<br><br><br><br><br><br>     
+
